--- a/res/layout/weather_layout.xml
+++ b/res/layout/weather_layout.xml
@@ -8,6 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#484E61" >
+        
+        <Button 
+            android:id="@+id/switch_city"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/home" />"
 
         <TextView
             android:id="@+id/city_name"
@@ -15,7 +23,17 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textSize="24sp"
-            android:textColor="#fff" />        
+            android:textColor="#fff" />    
+            
+        <Button 
+            android:id="@+id/refresh_weather"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/refresh" />
+        
     </RelativeLayout>
     
     <RelativeLayout
